# kNN-opt

./: CMakeLists.txt  README.md
src/: main.cpp
src/classifier/: Knn.hpp
src/data/: DataHandler.hpp  Iris.cpp  Iris.hpp  Mushroom.cpp  Mushroom.hpp  Wine.cpp  Wine.hpp
